<resources>
    <string name="app_name">ALC 4 Phase1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="heading">ALC 4 Phase 1</string>
    <string name="number">Phone Number : +263775656105</string>
    <string name="slack">Slack : @DeeMawoyo</string>
    <string name="track">Track : Android</string>
    <string name="country">Country : Zimbabwe</string>
    <string name="email">Email : deemawoyo@gmail.com</string>
</resources>
